// constants.proto
//
// Constants that are useful for finite state automata.
syntax = "proto3";

package game.engine.fsm.api.constants;
option go_package = "game.engine.fsm.api.constants";
option csharp_namespace = "DF.Game.Engine.FSM.API.Constants";

enum FSMType {
  FSM_TYPE_UNKNOWN = 0;
  FSM_TYPE_MOVE = 1;
  FSM_TYPE_PRODUCE = 2;
  FSM_TYPE_CHASE = 3;
  FSM_TYPE_ATTACK = 4;

  FSM_TYPE_CLIENT = 1000;
}

enum ChaseState {
  CHASE_STATE_UNKNOWN = 0;
  CHASE_STATE_IN_RANGE = 1;
  CHASE_STATE_OUT_OF_RANGE = 2;
}

enum CommonState {
  COMMON_STATE_UNKNOWN = 0;
  COMMON_STATE_PENDING = 1;
  COMMON_STATE_EXECUTING = 2;

  // External cancellation due to precedence.
  COMMON_STATE_CANCELED = 3;

  COMMON_STATE_FINISHED = 4;
}
